--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>Document</title>
     <link rel="stylesheet" href="all.css">
     <link rel="stylesheet" href="style.css">
+    <script src="http://kit.fontawesome.com/55922b8b80.js" crossorigin="anonymous"></script>
    
 </head>
 <body>
