--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -8,149 +9,153 @@
     <link rel="stylesheet" href="all.css">
     <link rel="stylesheet" href="style.css">
     <script src="http://kit.fontawesome.com/55922b8b80.js" crossorigin="anonymous"></script>
-   
+
 </head>
+
 <body>
-   <header id="home">
-       <nav>
-           <div class="logo">
-               Pho<span>to  </span>Gra<span>Phy</span>
-           </div>
-           <div class="menubar"><i class="fa fa-bars"></i></div>
-           <div class="menu">
-            <div class="menucross"> X </div>
-               <a href="#home">Home</a>
-               <a href="#about">About</a>
-               <a href="#gallery">Gallery</a>
-               <a href="#contact">Contact</a>
-           </div>
-           <div class="icon">
-               <i class="fa fa-search"></i>
-               <a href="">Login</a>
-           </div>
-       </nav>
-      <section class="h-text">
-          <i class="fa fa-camera" id="camera"></i>
-          <h1 class="animate__animated animate__bounce">Capturing the moments that captivate your heart.</h1>
-          <input type="text" name="" placeholder="Search here...">
-          <button><i class="fas fa-search"></i></button>
-      </section>
-   </header>
-   <section class="filter-gallery" id="gallery">
-           <ul class="portfolio-menu">
-               <li class="active" data-filter="all">All</li>
-               <li data-filter="nature">Nature</li>
-               <li  data-filter="work">work</li>
-               <li data-filter="Study">Study</li>
-           </ul>
-   
-       <div class="portfolio-item">
-           <div class="item nature one" data-item="nature">
-               <img src="jpg/2.jpg" alt="" width="100" height="100">
-           </div>
-           <div class="item work two" data-item="work">
-               <img src="jpg/3.jpg" alt="" width="100" height="100">
-           </div>
-           <div class="item study three" data-item="Study">
-               <img src="jpg/4.jpg" alt="" width="100" height="100">
-           </div>
-           <div class="item nature four" data-item="nature">
-               <img src="jpg/8.jpg" alt="" width="100" height="100">
-           </div>
-           <div class="item work five" data-item="work">
-               <img src="jpg/9.jpg" alt="" width="100" height="100">
-           </div>
-           <div class="item study six" data-item="Study">
-               <img src="jpg/10.jpg" alt="" width="100" height="100">
-           </div>
-           <div class="item nature seven" data-item="nature">
-               <img src="jpg/5.jpg" alt="" width="100" height="100">
-           </div>
-           <div class="item work eight" data-item="work">
-               <img src="jpg/6.jpg" alt="" width="100" height="100">
-           </div>
-           <div class="item study nine" data-item="Study">
-               <img src="jpg/7.jpg" alt="" width="100" height="100">
-           </div>         
-       </div>
-   </section>
-   
-   <section class="member" id="about">
-       <div class="member-info">
-           <h1>Our <span>Information</span></h1>
-           <p>What Our Client says</p>
-       </div>
-       <div class="member-card">
-           <img src="png/client.png" alt="">
-           <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Inventore nam atque ab dolor culpa corporis pariatur harum, sapiente excepturi. Necessitatibus omnis quo vitae quis deleniti harum ab, exercitationem dolore facere.</p>
-           <h2>Devid Johnson</h2>
-           <img src="png/facebook.png" alt="">
-           <img src="png/whatsapp.png" alt="">
-           <img src="png/ins.png" alt="">
-           <img src="png/twitter.png" alt="">
-       </div>
-       <div class="m-images">
-           <img src="jpg/person 1.jpg" alt="">
-           <img src="jpg/person2.jpg" alt="">
-           <img src="jpg/person3.jpg" alt="">
-           <img src="jpg/person4.jpg" alt="">
-           <img src="jpg/person5.jpg" alt="">
-           <img src="jpg/person6.jpg" alt="">
-       </div>
-   </section>
-   <footer id="contact">
-      <div class="newsletter">
-          <div>
-              <h2>Subcribe Our Group</h2>
-              <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quibusdam, illo!</p>
-          </div>
-          <div class="ntext">
-              <label for="">
-                  <input type="text" name="" id="">
-                  <button>Subcribe</button>
-              </label>
-          </div>
-      </div>
-      <div class="f-contact">
-          <div class="first-child">
-              <h1>Information</h1>
-              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sit, magni?</p>
-              <ul>
-                  <li><a href=""><i class="fab fa-whatsapp"></i></a></i></li>
-                  <li><a href=""><i class="fab fa-instagram"></i></a></li>
-                  <li><a href=""><i class="fab fa-telegram"></i></a></li>
-                  <li><a href=""><i class="fab fa-twitter"></i></a></li>
+    <header id="home">
+        <nav>
+            <div class="logo">
+                Pho<span>to </span>Gra<span>Phy</span>
+            </div>
+            <div class="menubar"><i class="fa fa-bars"></i></div>
+            <div class="menu">
+                <div class="menucross"> X </div>
+                <a href="#home">Home</a>
+                <a href="#about">About</a>
+                <a href="#gallery">Gallery</a>
+                <a href="#contact">Contact</a>
+            </div>
+            <div class="icon">
+                <i class="fa fa-search"></i>
+                <a href="">Login</a>
+            </div>
+        </nav>
+        <section class="h-text">
+            <i class="fa fa-camera" id="camera"></i>
+            <h1 class="animate__animated animate__bounce">Capturing the moments that captivate your heart.</h1>
+            <input type="text" name="" placeholder="Search here...">
+            <button><i class="fas fa-search"></i></button>
+        </section>
+    </header>
+    <section class="filter-gallery" id="gallery">
+        <ul class="portfolio-menu">
+            <li class="active" data-filter="all">All</li>
+            <li data-filter="nature">Nature</li>
+            <li data-filter="work">work</li>
+            <li data-filter="Study">Study</li>
+        </ul>
+
+        <div class="portfolio-item">
+            <div class="item nature one" data-item="nature">
+                <img src="jpg/2.jpg" alt="" width="100" height="100">
+            </div>
+            <div class="item work two" data-item="work">
+                <img src="jpg/3.jpg" alt="" width="100" height="100">
+            </div>
+            <div class="item study three" data-item="Study">
+                <img src="jpg/4.jpg" alt="" width="100" height="100">
+            </div>
+            <div class="item nature four" data-item="nature">
+                <img src="jpg/8.jpg" alt="" width="100" height="100">
+            </div>
+            <div class="item work five" data-item="work">
+                <img src="jpg/9.jpg" alt="" width="100" height="100">
+            </div>
+            <div class="item study six" data-item="Study">
+                <img src="jpg/10.jpg" alt="" width="100" height="100">
+            </div>
+            <div class="item nature seven" data-item="nature">
+                <img src="jpg/5.jpg" alt="" width="100" height="100">
+            </div>
+            <div class="item work eight" data-item="work">
+                <img src="jpg/6.jpg" alt="" width="100" height="100">
+            </div>
+            <div class="item study nine" data-item="Study">
+                <img src="jpg/7.jpg" alt="" width="100" height="100">
+            </div>
+        </div>
+    </section>
+
+    <section class="member" id="about">
+        <div class="member-info">
+            <h1>Our <span>Information</span></h1>
+            <p>What Our Client says</p>
+        </div>
+        <div class="member-card">
+            <img src="png/client.png" alt="">
+            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Inventore nam atque ab dolor culpa corporis
+                pariatur harum, sapiente excepturi. Necessitatibus omnis quo vitae quis deleniti harum ab,
+                exercitationem dolore facere.</p>
+            <h2>Devid Johnson</h2>
+            <img src="png/facebook.png" alt="">
+            <img src="png/whatsapp.png" alt="">
+            <img src="png/ins.png" alt="">
+            <img src="png/twitter.png" alt="">
+        </div>
+        <div class="m-images">
+            <img src="jpg/person 1.jpg" alt="">
+            <img src="jpg/person2.jpg" alt="">
+            <img src="jpg/person3.jpg" alt="">
+            <img src="jpg/person4.jpg" alt="">
+            <img src="jpg/person5.jpg" alt="">
+            <img src="jpg/person6.jpg" alt="">
+        </div>
+    </section>
+    <footer id="contact">
+        <div class="newsletter">
+            <div>
+                <h2>Subcribe Our Group</h2>
+                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quibusdam, illo!</p>
+            </div>
+            <div class="ntext">
+                <label for="">
+                    <input type="text" name="" id="">
+                    <button>Subcribe</button>
+                </label>
+            </div>
+        </div>
+        <div class="f-contact">
+            <div class="first-child">
+                <h1>Information</h1>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sit, magni?</p>
+                <ul>
+                    <li><a href=""><i class="fab fa-whatsapp"></i></a></i></li>
+                    <li><a href=""><i class="fab fa-instagram"></i></a></li>
+                    <li><a href=""><i class="fab fa-telegram"></i></a></li>
+                    <li><a href=""><i class="fab fa-twitter"></i></a></li>
                 </ul>
+            </div>
+            <div>
+                <h2>Useful links</h2>
+                <ul>
+                    <li><a href="">About us</a></li>
+                    <li><a href="">Gallery</a></li>
+                    <li><a href="">Blog posts </a></li>
+                    <li><a href="">Pricing plans</a></li>
+                </ul>
+            </div>
+            <div>
+                <h2>Useful links</h2>
+                <ul>
+                    <li><a href="">About us</a></li>
+                    <li><a href="">Gallery</a></li>
+                    <li><a href="">Blog posts </a></li>
+                    <li><a href="">Pricing plans</a></li>
+                </ul>
+            </div>
+            <div>
+                <h2>Useful links</h2>
+                <ul>
+                    <li><a href="">About us</a></li>
+                    <li><a href="">Gallery</a></li>
+                    <li><a href="">Blog posts </a></li>
+                    <li><a href="">Pricing plans</a></li>
+                </ul>
+            </div>
         </div>
-        <div>
-            <h2>Useful links</h2>
-            <ul>
-                <li><a href="">About us</a></li>
-                <li><a href="">Gallery</a></li>
-                <li><a href="">Blog posts </a></li>
-                <li><a href="">Pricing plans</a></li>
-            </ul>
-        </div>
-        <div>
-            <h2>Useful links</h2>
-            <ul>
-                <li><a href="">About us</a></li>
-                <li><a href="">Gallery</a></li>
-                <li><a href="">Blog posts </a></li>
-                <li><a href="">Pricing plans</a></li>
-            </ul>
-        </div>
-        <div>
-            <h2>Useful links</h2>
-            <ul>
-                <li><a href="">About us</a></li>
-                <li><a href="">Gallery</a></li>
-                <li><a href="">Blog posts </a></li>
-                <li><a href="">Pricing plans</a></li>
-            </ul>
-        </div>
-      </div>
-   </footer>
+    </footer>
     <script src="main.js"></script>
 </body>
+
 </html>
