--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="all.css">
+    <!-- <link rel="stylesheet" href="all.css"> -->
     <link rel="stylesheet" href="style.css">
     <script src="http://kit.fontawesome.com/55922b8b80.js" crossorigin="anonymous"></script>
 
